--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@ googlecode.com/ svn/trunk/html5.js'></script>
 
 <section class="main">
     <h1>Hello World</h1>
+    <h2>Hello World</h2>
 </section>
 
 
