--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@ googlecode.com/ svn/trunk/html5.js'></script>
 <section class="main">
     <h1>Hello World</h1>
     <h2>Hello World</h2>
+    <h3>Hello World</h3>
 </section>
 
 
