--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,34 @@
-!<!DOCTYPE html>
+!
+<!DOCTYPE html>
 
 <html lang='en'>
+
 <head>
 
-<!--[if lt IE 9]> <script src='//html5shiv.
+    <!--[if lt IE 9]> <script src='//html5shiv.
 googlecode.com/ svn/trunk/html5.js'></script>
 <![endif]-->
-<meta charset='utf-8'/>
-<meta http-equiv='content-type' content='text/html'/>
-<meta name='description' content='Info for SEO'/>
-<meta name='author' content='Stanislav SKK'/>
-<meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'/>
-<meta name='viewport' content='width=device-width, initial-scale=1.0'/>
-<title> 30-65 SYMBOLS </title>
-<link rel='stylesheet' type='text/css' href='normalize.css'/>
-<link rel='stylesheet' type='text/css' href='style.css' media='screen'/>
+    <meta charset='utf-8' />
+    <meta http-equiv='content-type' content='text/html' />
+    <meta name='description' content='Info for SEO' />
+    <meta name='author' content='Stanislav SKK' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title> 30-65 SYMBOLS </title>
+    <link rel='stylesheet' type='text/css' href='normalize.css' />
+    <link rel='stylesheet' type='text/css' href='style.css' media='screen' />
 
 </head>
 
 <body>
 
-<section class="main">
-    <h1>Hello World</h1>
-    <h2>Hello World</h2>
-<<<<<<< HEAD
-    <h4>Hello World</h4>
-=======
-    <h3>Hello World</h3>
->>>>>>> new_changes_branch
-</section>
+    <section class="main">
+        <h1>Hello World</h1>
+        <h2>Hello World</h2>
+        <h3>Hello World</h3>
+        <h4>Hello World</h4>
+
+    </section>
 
 
 
@@ -45,6 +45,7 @@ googlecode.com/ svn/trunk/html5.js'></script>
 
 
 
-<!-- <script src='script.js'></script> -->
+    <!-- <script src='script.js'></script> -->
 </body>
+
 </html>
